--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 scriptnet/competitions/static/ linguist-vendored
 *.css linguist-vendored=true
+*.less linguist-vendored=true
+*.scss linguist-vendored=true
