Adds a benchmark called 'icfhr14tool_check'. This calls the evaluation tool; runs OK

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 scriptnet/competitions/static/ linguist-vendored
+executables/ linguist-vendored
 *.css linguist-vendored=true
 *.less linguist-vendored=true
 *.scss linguist-vendored=true
+*.xml linguist-vendored=true
