--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ language: python
 python:
   - "3.4"
 env:
-  - DJANGO_VERSION=1.8
   - DJANGO_VERSION=1.9
-before_install: cd scriptnet
+before_install: 
+  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+  - sudo echo "deb http://download.mono-project.com/repo/debian wheezy main" | tee /etc/apt/sources.list.d/mono-xamarin.list
+  - sudo apt-get update
+  - sudo apt-get install mono-complete
+  - sudo apt-get p7zip
+  - cd scriptnet
 install: 
   - pip3 install Django==$DJANGO_VERSION --use-mirrors
   - pip3 install django-bootstrap3 django_tables2 --use-mirrors
