--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - DJANGO_VERSION=1.9
 before_install: 
   - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-  - sudo echo "deb http://download.mono-project.com/repo/debian wheezy main" | tee /etc/apt/sources.list.d/mono-xamarin.list
+  - sudo echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
   - sudo apt-get update
   - sudo apt-get install mono-complete
   - sudo apt-get p7zip
