--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
   - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
   - sudo echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
   - sudo apt-get update
-  - sudo apt-get install mono-complete
-  - sudo apt-get p7zip
+  - sudo apt-get -f install mono-complete
+  - sudo apt-get -f install p7zip
   - cd scriptnet
 install: 
   - pip3 install Django==$DJANGO_VERSION --use-mirrors
