--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ python:
 env:
   - DJANGO_VERSION=1.9
 before_install: 
-  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-  - sudo echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
-  - sudo apt-get update -qq
-  - sudo apt-get install libmono-cil-dev -fy
-  - sudo apt-get install p7zip -fy
+  - set -ev
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+  - echo "deb http://download.mono-project.com/repo/debian wheezy/snapshots/3.12.0 main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
+  - echo "deb http://download.mono-project.com/repo/debian wheezy-libtiff-compat main" | sudo tee -a /etc/apt/sources.list.d/mono-xamarin.list
+  - sudo apt-get update
+  - sudo apt-get install mono-devel -y  
+  - sudo apt-get install p7zip -y
   - cd scriptnet
 install: 
   - pip3 install Django==$DJANGO_VERSION --use-mirrors
