--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.4"
   - "3.5"
+  - "nightly"
 env:
+  - DJANGO_VERSION=1.8
   - DJANGO_VERSION=1.9
 before_install: 
   - set -ev
