--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ python:
   - "nightly"
 env:
   - DJANGO_VERSION=1.9
-  - DJANGO_VERSION=1.10rc1
+  - DJANGO_VERSION=1.10
+  - DJANGO_VERSION=1.11rc1  
 before_install: 
   - set -ev
   - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
